# thunderbot

./: .dockerignore  .env.example  .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  echo.rs  main.rs
crates/cli/src/commands/: ai.rs  bsky.rs  config.rs  db.rs  jetstream.rs  mod.rs  serve.rs  vector.rs
crates/core/: Cargo.toml  build.rs
crates/core/config/: default.toml
crates/core/migrations/: 001_init.sql  001_initial.sql  002_add_session.sql  002_vector_memory.sql  003_add_search_indexes.sql  003_memory_content_hash.sql  004_add_filters_and_activity.sql  005_operational_controls.sql
crates/core/prompts/: constitution.md
crates/core/src/: agent.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  processor.rs
crates/core/src/ai/: client.rs  mod.rs  prompt.rs  types.rs
crates/core/src/bsky/: client.rs  mod.rs  models.rs  session.rs  types.rs
crates/core/src/control/: broadcaster.rs  dlq_manager.rs  mod.rs  policy_enforcer.rs  session_manager.rs  types.rs
crates/core/src/db/: connection.rs  identity.rs  libsql.rs  migrations.rs  mod.rs  models.rs  repository.rs  thread.rs  types.rs
crates/core/src/db/libsql/: control.rs  libsql_activity.rs  libsql_identity.rs  libsql_operational.rs  libsql_search.rs  libsql_session.rs  libsql_thread.rs  mod.rs  resp_queue.rs
crates/core/src/db/traits/: activity.rs  blocklist.rs  control.rs  dead_letter.rs  filter.rs  identity.rs  mod.rs  quiet_hours.rs  rate_limit.rs  reply_limits.rs  response_queue.rs  search.rs  session.rs  session_metadata.rs  thread.rs
crates/core/src/embedding/: mod.rs  ollama.rs  pipeline.rs  types.rs
crates/core/src/gemini/: client.rs  mod.rs  prompt_builder.rs  types.rs
crates/core/src/jetstream/: client.rs  event.rs  filter.rs  lib.rs  mod.rs  pipeline.rs  types.rs
crates/core/src/services/: action.rs  identity.rs  memory.rs  mod.rs  thread.rs
crates/core/src/vector/: embedding.rs  mod.rs  retrieval.rs  sqlite_store.rs  types.rs
crates/core/src/web/: auth.rs  controls.rs  cookies.rs  handlers.rs  mod.rs  server.rs  templates.rs  user_client.rs
crates/core/src/web/static/js/: keyboard.js  theme.js
crates/core/tests/: jetstream_integration.rs
crates/web/: Cargo.toml
crates/web/src/: assets.css  formatters.rs  lib.rs  partials.rs  runtime.rs  views.rs
crates/web/src/assets/: confirm_modal.js  stylesheet.css
crates/web/src/pages/: admin.rs  chat.rs  config.rs  dashboard.rs  health.rs  login.rs  logs.rs  mod.rs
docs/: architecture.md  bsky.md  constitution.md  gemini-integration.md  jetstream.md  llm-ext.md  llm.md  protocols.md  ui.md  vectors.md  voice.md  web-dashboard.md
