[package]
name = "thunderbot-core"
version = "0.7.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { version = "0.28", features = [
    "rustls-tls-native-roots",
    "native-tls",
] }
async-compression = { version = "0.4", features = ["zstd", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
zstd = "0.13"
rand = "0.9"
libsql = "0.9"
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
sqlite-vec = "0.1"
sha2 = "0.10"
hex = "0.4"
axum = "0.8"
maud = { version = "0.26", features = ["axum"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower = "0.5"
base64 = "0.22"
aes-gcm = "0.10"
typenum = "1.17"
csv = "1.3"
chrono-tz = "0.10"

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
