[package]
name = "tnbot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"
toml = "0.9"
thiserror = "2"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
