[package]
name = "tnbot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"
toml = { version = "0.9", features = ["serde"] }
thiserror = "2"
anyhow = "1.0"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }
zstd = "0.13"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
futures-util = "0.3"
url = "2"
rand = "0.10"
urlencoding = "2"
async-trait = "0.1"
libsql = "0.9"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
