[package]
name = "tnbot-web"
version = "0.1.0"
edition = "2024"

[dependencies]
tnbot-core = { path = "../core" }
anyhow = "1.0"
axum = { version = "0.8", features = ["form", "json", "macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
maud = { version = "0.27", features = ["axum"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
urlencoding = "2"
tracing = "0.1"
